Replicate sample at https://docs.gradle.org/current/samples/sample_jvm_multi_project_with_code_coverage_standalone.html

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
-rootProject.name = 'reproducer-project'
+rootProject.name = 'jvm-multi-project-with-code-coverage-reproducer'
+
+// production code projects
+include 'application', 'list', 'utilities'
+
+// reporting utility projects
+include 'code-coverage-report'
