Add custom integrationTest test suite

--- a/buildSrc/src/main/groovy/myproject.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/myproject.java-conventions.gradle
@@ -15,6 +15,12 @@ testing {
         test(JvmTestSuite) {
             useJUnitJupiter()
         }
+
+        integrationTest(JvmTestSuite) {
+            dependencies {
+                implementation project
+            }
+        }
     }
 }
 
