--- a/.github/workflows/run-reproducer.yml
+++ b/.github/workflows/run-reproducer.yml
@@ -13,4 +13,4 @@ jobs:
         java-version: 11
     - uses: gradle/gradle-build-action@v2
       with:
-        arguments: help --info
+        arguments: :code-coverage-report:testCodeCoverageReport :code-coverage-report:integrationTestCodeCoverageReport
